# muriel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  TODO.md  install.sh  muriel.md  pyproject.toml  render.md  tools.md
.claude/: settings.json
.claude-plugin/: marketplace.json
agents/: muriel-critique.md
channels/: diagrams.md  dimensions.md  gaze.md  heatmaps.md  infographics.md  interactive.md  raster.md  science.md  style-guides.md  svg.md  terminal.md  video.md  web.md
docs/: CNAME  PERMUTE.md  index.html  spec-plugin-packaging.md
examples/: example-brand.toml  muriel-brand.toml  psychodeli-brand.toml  render-brand.toml  scrutinizer-brand.toml
examples/critique-fixtures/: README.md
examples/drop-caps/: gen_dropcap.py  gen_foveated_dropcap.py
examples/drop-caps/output/: marginalia-dropcap-textures.css  preview-marginalia-variants.html  preview-scrutinizer-v26.html
examples/gallery/: README.md  favicon-gen.py  v1-orientation-columns-demo.py
examples/logos/: gen_animated_gif.py  gen_brushstroke_logo.py  gen_labjournal_logo.py
examples/logos/output/bauhaus/: animated-bauhaus-m.html
examples/logos/output/colophon/: interactive-colophon.html
muriel/: README.md  __init__.py  __main__.py  aiism.py  capture.py  chart.py  contrast.py  critique.py  design_md_import.py  dimensions.py  doctor.py  layout.py  matplotlibrc_dark.py  matplotlibrc_light.py  oklch.py  palettes.py  provenance.py  stats.py  styleguide.py  typeset.py  warmup.py
muriel/detectors/: __init__.py  faces.py  saliency.py  text.py
muriel/tools/: __init__.py  heroshot.py  smartcrop.py  tilt_shift.py  venn.py
muriel/tools/diagrams/: __init__.py  cycle.py  engine_sectors_overlay.py  foveal_overlay.py  matrix.py
plugins/muriel/.claude-plugin/: plugin.json
plugins/muriel/agents/: muriel-critique.md
plugins/muriel/skills/compose/: SKILL.md
plugins/muriel/skills/compose/channels/: SCHEMA.md  diagrams.md  dimensions.md  gaze.md  infographics.md  interactive.md  raster.md  science.md  style-guides.md  svg.md  terminal.md  video.md  web.md
plugins/muriel/skills/compose/examples/: example-brand.toml  fui-scaffold.html
plugins/muriel/skills/compose/examples/drop-caps/output/: marginalia-dropcap-textures.css  preview-css-composite.html  preview-marginalia-variants.html
plugins/muriel/skills/compose/examples/gallery/: README.md  product-shot-demo.py  venn-scope-demo.py
plugins/muriel/skills/compose/examples/logos/: gen_bauhaus_m_logo.py  gen_circuit_logo.py  gen_colophon_logo.py  render_captured_frame.py
plugins/muriel/skills/compose/examples/logos/output/colophon/: animated-colophon-v2.html  animated-colophon.html
plugins/muriel/skills/compose/vocabularies/: declassified.md  fui.md  katex.md  muriel-brand.md  pixijs.md  visible-language.md
render_assets/: README.md  __init__.py  capture.py  contrast.py  dimensions.py  matplotlibrc_dark.py  matplotlibrc_light.py  stats.py  styleguide.py
scenarios/: math-essay.md  photons-to-recognition.md
templates/: amazon-icon.json  amazon-small-icon.json  play-feature.json  tvos-topshelf.json
tools/: gen_og_batch.py
vocabularies/: fui.md  kinetic-typography.md  muriel-brand.md  visible-language.md
