[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name            = "muriel"
version         = "0.5.0"
description     = "A multi-constraint solver for visual production — brand tokens, WCAG audit, APA-style reporting, dimensions, matplotlibrc blocks, raster/SVG/web/gaze helpers across ten channels."
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "MIT" }
authors         = [{ name = "Andy Edmonds" }]
keywords        = ["matplotlib", "rcparams", "statistics", "apa", "reporting", "wcag", "visualization"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
]

# No required dependencies. matplotlib is expected to be present in any
# notebook that imports matplotlibrc_dark / matplotlibrc_light but is not
# declared here because the stats module works without it.
dependencies = []

[tool.setuptools]
packages = ["muriel", "render_assets"]
